--- a/src/qt/forms/overviewpage.ui
+++ b/src/qt/forms/overviewpage.ui
@@ -207,6 +207,9 @@
           </item>
           <item row="4" column="0" colspan="2">
            <widget class="Line" name="line">
+            <property name="autoFillBackground">
+             <bool>false</bool>
+            </property>
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
             </property>
