log out button, input limit and timer

--- a/src/qt/forms/ChatWindow.ui
+++ b/src/qt/forms/ChatWindow.ui
@@ -304,6 +304,9 @@ color: #4C4C4C;
 padding: 4px;
 margin-right:6px;</string>
                 </property>
+                <property name="maxLength">
+                 <number>300</number>
+                </property>
                </widget>
               </item>
               <item>
