--- a/src/qt/forms/ChatWindow.ui
+++ b/src/qt/forms/ChatWindow.ui
@@ -77,161 +77,6 @@ border-radius: 25px;
          </property>
          <widget class="QWidget" name="chatPage">
           <layout class="QGridLayout" name="gridLayout">
-           <item row="0" column="3" rowspan="2" colspan="2">
-            <widget class="QFrame" name="verticalFrame">
-             <property name="styleSheet">
-              <string notr="true">background: none;
-background-color: #F2F1F0;
-border-radius:3px;
-border: 1px solid #C4C1BD;
-color: #4C4C4C;
-padding: 4px;
-</string>
-             </property>
-             <layout class="QVBoxLayout" name="verticalLayout_3">
-              <property name="spacing">
-               <number>0</number>
-              </property>
-              <property name="leftMargin">
-               <number>3</number>
-              </property>
-              <property name="topMargin">
-               <number>0</number>
-              </property>
-              <property name="rightMargin">
-               <number>3</number>
-              </property>
-              <property name="bottomMargin">
-               <number>3</number>
-              </property>
-              <item>
-               <widget class="QWidget" name="horizontalWidget" native="true">
-                <property name="styleSheet">
-                 <string notr="true">border:none;</string>
-                </property>
-                <layout class="QHBoxLayout" name="horizontalLayout_2">
-                 <property name="spacing">
-                  <number>0</number>
-                 </property>
-                 <property name="leftMargin">
-                  <number>0</number>
-                 </property>
-                 <property name="topMargin">
-                  <number>0</number>
-                 </property>
-                 <property name="rightMargin">
-                  <number>0</number>
-                 </property>
-                 <property name="bottomMargin">
-                  <number>0</number>
-                 </property>
-                 <item>
-                  <widget class="QLabel" name="label_3">
-                   <property name="styleSheet">
-                    <string notr="true">border:none;
-padding: 0 0 6px 0;</string>
-                   </property>
-                   <property name="text">
-                    <string>User list</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item>
-                  <widget class="QPushButton" name="logoutButton">
-                   <property name="maximumSize">
-                    <size>
-                     <width>20</width>
-                     <height>16777215</height>
-                    </size>
-                   </property>
-                   <property name="styleSheet">
-                    <string notr="true">background: none;
-background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:0, y2:0, stop:0 rgb(240,240,240), stop:1 rgb(255, 255, 255));
-border-radius:3px;
-border: 1px solid #C4C1BD;
-color: #4C4C4C;
-padding: 0;
-margin-bottom: 4px;</string>
-                   </property>
-                   <property name="text">
-                    <string/>
-                   </property>
-                   <property name="icon">
-                    <iconset resource="../bitcoin.qrc">
-                     <normaloff>:/icons/res/icons/power.png</normaloff>:/icons/res/icons/power.png</iconset>
-                   </property>
-                  </widget>
-                 </item>
-                </layout>
-               </widget>
-              </item>
-              <item>
-               <widget class="QListWidget" name="userListWidget">
-                <property name="styleSheet">
-                 <string notr="true">background-color: #FFF;</string>
-                </property>
-               </widget>
-              </item>
-             </layout>
-            </widget>
-           </item>
-           <item row="0" column="0" rowspan="2" colspan="3">
-            <widget class="QFrame" name="verticalFrame">
-             <property name="styleSheet">
-              <string notr="true">background: none;
-background-color: #F2F1F0;
-border-radius:3px;
-border: 1px solid #C4C1BD;
-color: #4C4C4C;
-padding: 4px;
-</string>
-             </property>
-             <layout class="QVBoxLayout" name="verticalLayout_4">
-              <property name="spacing">
-               <number>0</number>
-              </property>
-              <property name="leftMargin">
-               <number>3</number>
-              </property>
-              <property name="topMargin">
-               <number>0</number>
-              </property>
-              <property name="rightMargin">
-               <number>3</number>
-              </property>
-              <property name="bottomMargin">
-               <number>3</number>
-              </property>
-              <item>
-               <widget class="QLabel" name="label_4">
-                <property name="styleSheet">
-                 <string notr="true">border:none;
-padding: 0 0 6px 0;</string>
-                </property>
-                <property name="text">
-                 <string>Chat history</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QTextEdit" name="roomTextEdit">
-                <property name="styleSheet">
-                 <string notr="true">background: none;
-background-color: #FFF;
-border-radius:3px;
-border: 1px solid #C4C1BD;
-color: #4C4C4C;
-padding: 4px;
-</string>
-                </property>
-                <property name="readOnly">
-                 <bool>true</bool>
-                </property>
-               </widget>
-              </item>
-             </layout>
-            </widget>
-           </item>
            <item row="2" column="0" colspan="5">
             <widget class="QFrame" name="horizontalFrame">
              <property name="maximumSize">
@@ -333,6 +178,170 @@ padding: 4px 12px;</string>
                 </property>
                 <property name="text">
                  <string>Send</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </widget>
+           </item>
+           <item row="0" column="4" rowspan="2">
+            <widget class="QFrame" name="verticalFrame">
+             <property name="maximumSize">
+              <size>
+               <width>200</width>
+               <height>16777215</height>
+              </size>
+             </property>
+             <property name="styleSheet">
+              <string notr="true">background: none;
+background-color: #F2F1F0;
+border-radius:3px;
+border: 1px solid #C4C1BD;
+color: #4C4C4C;
+padding: 4px;
+</string>
+             </property>
+             <layout class="QVBoxLayout" name="verticalLayout_3">
+              <property name="spacing">
+               <number>0</number>
+              </property>
+              <property name="leftMargin">
+               <number>3</number>
+              </property>
+              <property name="topMargin">
+               <number>0</number>
+              </property>
+              <property name="rightMargin">
+               <number>3</number>
+              </property>
+              <property name="bottomMargin">
+               <number>3</number>
+              </property>
+              <item>
+               <widget class="QWidget" name="horizontalWidget" native="true">
+                <property name="styleSheet">
+                 <string notr="true">border:none;</string>
+                </property>
+                <layout class="QHBoxLayout" name="horizontalLayout_2">
+                 <property name="spacing">
+                  <number>0</number>
+                 </property>
+                 <property name="leftMargin">
+                  <number>0</number>
+                 </property>
+                 <property name="topMargin">
+                  <number>0</number>
+                 </property>
+                 <property name="rightMargin">
+                  <number>0</number>
+                 </property>
+                 <property name="bottomMargin">
+                  <number>0</number>
+                 </property>
+                 <item>
+                  <widget class="QLabel" name="label_3">
+                   <property name="styleSheet">
+                    <string notr="true">border:none;
+padding: 0 0 6px 0;</string>
+                   </property>
+                   <property name="text">
+                    <string>User list</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QPushButton" name="logoutButton">
+                   <property name="maximumSize">
+                    <size>
+                     <width>20</width>
+                     <height>16777215</height>
+                    </size>
+                   </property>
+                   <property name="styleSheet">
+                    <string notr="true">background: none;
+background-color: qlineargradient(spread:pad, x1:0, y1:1, x2:0, y2:0, stop:0 rgb(240,240,240), stop:1 rgb(255, 255, 255));
+border-radius:3px;
+border: 1px solid #C4C1BD;
+color: #4C4C4C;
+padding: 0;
+margin-bottom: 4px;</string>
+                   </property>
+                   <property name="text">
+                    <string/>
+                   </property>
+                   <property name="icon">
+                    <iconset resource="../bitcoin.qrc">
+                     <normaloff>:/icons/res/icons/power.png</normaloff>:/icons/res/icons/power.png</iconset>
+                   </property>
+                  </widget>
+                 </item>
+                </layout>
+               </widget>
+              </item>
+              <item>
+               <widget class="QListWidget" name="userListWidget">
+                <property name="styleSheet">
+                 <string notr="true">background-color: #FFF;</string>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </widget>
+           </item>
+           <item row="0" column="0" rowspan="2" colspan="4">
+            <widget class="QFrame" name="verticalFrame">
+             <property name="styleSheet">
+              <string notr="true">background: none;
+background-color: #F2F1F0;
+border-radius:3px;
+border: 1px solid #C4C1BD;
+color: #4C4C4C;
+padding: 4px;
+</string>
+             </property>
+             <layout class="QVBoxLayout" name="verticalLayout_4">
+              <property name="spacing">
+               <number>0</number>
+              </property>
+              <property name="leftMargin">
+               <number>3</number>
+              </property>
+              <property name="topMargin">
+               <number>0</number>
+              </property>
+              <property name="rightMargin">
+               <number>3</number>
+              </property>
+              <property name="bottomMargin">
+               <number>3</number>
+              </property>
+              <item>
+               <widget class="QLabel" name="label_4">
+                <property name="styleSheet">
+                 <string notr="true">border:none;
+padding: 0 0 6px 0;</string>
+                </property>
+                <property name="text">
+                 <string>Chat history</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QTextEdit" name="roomTextEdit">
+                <property name="styleSheet">
+                 <string notr="true">background: none;
+background-color: #FFF;
+border-radius:3px;
+border: 1px solid #C4C1BD;
+color: #4C4C4C;
+padding: 4px;
+</string>
+                </property>
+                <property name="readOnly">
+                 <bool>true</bool>
+                </property>
+                <property name="textInteractionFlags">
+                 <set>Qt::TextBrowserInteraction</set>
                 </property>
                </widget>
               </item>
@@ -522,9 +531,12 @@ padding: 4px;
 margin: 0px 6px 0px 0px;
 color: #4C4C4C;</string>
                 </property>
+                <property name="maxLength">
+                 <number>20</number>
+                </property>
                </widget>
               </item>
-              <item row="2" column="1">
+              <item row="3" column="1">
                <widget class="QPushButton" name="loginButton">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -544,6 +556,13 @@ padding: 4px 12px;</string>
                 </property>
                </widget>
               </item>
+              <item row="2" column="1">
+               <widget class="QCheckBox" name="rememberCheckBox">
+                <property name="text">
+                 <string>remember me</string>
+                </property>
+               </widget>
+              </item>
              </layout>
             </widget>
            </item>
@@ -560,7 +579,6 @@ padding: 4px 12px;</string>
  <tabstops>
   <tabstop>serverLineEdit</tabstop>
   <tabstop>userLineEdit</tabstop>
-  <tabstop>loginButton</tabstop>
  </tabstops>
  <resources>
   <include location="../bitcoin.qrc"/>
