chat updates complete

--- a/src/qt/bitcoin.qrc
+++ b/src/qt/bitcoin.qrc
@@ -51,6 +51,7 @@
         <file alias="flag_cn">res/icons/flags/flag_cn.png</file>
         <file alias="chat">res/icons/chat.png</file>
         <file>res/icons/power.png</file>
+        <file alias="chat_alt">res/icons/chat_alt.png</file>
     </qresource>
     <qresource prefix="/smileys">
         <file alias="icon_smile">res/icons/smileys/icon_smile.png</file>
