private messaging completed,TODO: username check, PM alert

--- a/src/qt/forms/ChatWindow.ui
+++ b/src/qt/forms/ChatWindow.ui
@@ -105,44 +105,11 @@ border-radius: 25px;
                <number>0</number>
               </property>
               <item>
-               <widget class="QLabel" name="label_5">
-                <property name="maximumSize">
-                 <size>
-                  <width>90</width>
-                  <height>16777215</height>
-                 </size>
-                </property>
-                <property name="baseSize">
-                 <size>
-                  <width>0</width>
-                  <height>0</height>
-                 </size>
-                </property>
-                <property name="styleSheet">
-                 <string notr="true">background: none;
-background-color: #F2F1F0;
-border-radius:3px;
-border-top-right-radius: 0px;
-border-bottom-right-radius: 0px;
-border: 1px solid #C4C1BD;
-border-right: 1px solid #AAA;
-color: #4C4C4C;
-padding: 4px;
-</string>
-                </property>
-                <property name="text">
-                 <string>Message</string>
-                </property>
-               </widget>
-              </item>
-              <item>
                <widget class="QLineEdit" name="sayLineEdit">
                 <property name="styleSheet">
                  <string notr="true">background: none;
 background-color: rgb(255,255,255);
 border-radius:3px;
-border-top-left-radius: 0px;
-border-bottom-left-radius: 0px;
 border: 1px solid #C4C1BD;
 border-left: none;
 color: #4C4C4C;
@@ -316,39 +283,9 @@ padding: 4px;
                <number>3</number>
               </property>
               <item>
-               <widget class="QLabel" name="label_4">
-                <property name="styleSheet">
-                 <string notr="true">border:none;
-padding: 0 0 6px 0;</string>
-                </property>
-                <property name="text">
-                 <string>Chat history</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QTextBrowser" name="roomTextBrowser">
-                <property name="styleSheet">
-                 <string notr="true">background: none;
-background-color: #FFF;
-border-radius:3px;
-border: 1px solid #C4C1BD;
-color: #4C4C4C;
-padding: 4px;
-</string>
-                </property>
-                <property name="readOnly">
-                 <bool>true</bool>
-                </property>
-                <property name="html">
-                 <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Ubuntu'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-                </property>
-                <property name="textInteractionFlags">
-                 <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
+               <widget class="QTabWidget" name="tabWidget">
+                <property name="currentIndex">
+                 <number>-1</number>
                 </property>
                </widget>
               </item>
